#PA1T100. Создание алгоритма расчета КБЖУ по антропометрическми данным и уелям пользователя.